@@ -2,6 +2,7 @@
 
 	* geoaudit/parse.py (main):
 	Calculate bounding box for each unique location, and print the length of the diagonal for each one.
+	(analyze): Split analyze function out of main, to provide external access to the data
 
 2011-03-21  neal  <neal@mcburnett.org>
 
